k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tekton-e2e-service
spec:
  type: ClusterIP
  selector:
    app: tekton-e2e
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
  sessionAffinity: None
