k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tekton-e2e-route
spec:
  port:
    targetPort: 3000
  tls:
    termination: edge
  to:
    name: tekton-e2e
    kind: Service
    weight: 100
  wildcardPolicy: None
